--- a/navbaar/nav.css
+++ b/navbaar/nav.css
@@ -2,223 +2,225 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-    transition: all 0.4s ease;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+  transition: all 0.4s ease;
 
 }
 
 body {
-    background-color: teal;
-    padding: 0;
-    margin: 0;
-    /*overflow: hidden; */
+  background-color: teal;
+  padding: 0;
+  margin: 0;
+  /*overflow: hidden; */
 }
 
 .nav-links {
-    position: relative;
-    /* Changed to fixed for better scrolling behavior */
-    /* background-color: lightslategray; */
-    display: flex;
-    justify-content: center;
-    list-style: none;
-    margin-top: -10px;
-    height: 80px;   
+  position: relative;
+  /* Changed to fixed for better scrolling behavior */
+  /* background-color: lightslategray; */
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  margin-top: -10px;
+  height: 80px;
 }
 
 .nav-links li a {
-    margin-top: 20px;
-    font-size: 23px;
-    font-weight: 800;
-    color: white;
-    text-decoration: none;
-    padding: 20px;
+  margin-top: 20px;
+  font-size: 23px;
+  font-weight: 800;
+  color: white;
+  text-decoration: none;
+  padding: 20px;
 }
 
 .nav-links li a:hover {
-    font-weight: 800; 
+  font-weight: 800;
 }
 
 
 .flip-box {
-    background-color: transparent;
-    width: 230px;
-    height: 240px;
-    border: 2px solid black;
-    margin-top: 30px;
-    perspective: 1000px;
-  }
-  
-  .flip-box-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-  }
-  
-  .flip-box:hover .flip-box-inner {
-    transform: rotateY(180deg);
-  }
-  
-  .flip-box-front, .flip-box-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-  
-  .flip-box-front {
-    background-color: #bbb;
-    color: black;
-  }
-  
-  .flip-box-back {
-    background-color: #555;
-    color: white;
-    transform: rotateY(180deg);
-  }
+  background-color: transparent;
+  width: 230px;
+  height: 240px;
+  border: 2px solid black;
+  margin-top: 30px;
+  perspective: 1000px;
+}
 
-  .flip-box2 {
-    background-color: transparent;
-    width: 230px;
-    height: 240px;
-    border: 2px solid black;
-    margin-top: 30px;
-    perspective: 1000px;
-  }
-  
-  .flip-box-inner2 {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-  }
-  
-  .flip-box2:hover .flip-box-inner2 {
-    transform: rotateY(180deg);
-  }
-  
-  .flip-box-front2, .flip-box-back2 {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-  
-  .flip-box-front2 {
-    background-color: #bbb;
-    color: black;
-  }
-  
-  .flip-box-back2 {
-    background-color: #555;
-    color: white;
-    transform: rotateY(180deg);
-  }
+.flip-box-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-box:hover .flip-box-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-box-front,
+.flip-box-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-box-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-box-back {
+  background-color: #555;
+  color: white;
+  transform: rotateY(180deg);
+}
+
+.flip-box2 {
+  background-color: transparent;
+  width: 230px;
+  height: 240px;
+  border: 2px solid black;
+  margin-top: 30px;
+  perspective: 1000px;
+}
+
+.flip-box-inner2 {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-box2:hover .flip-box-inner2 {
+  transform: rotateY(180deg);
+}
+
+.flip-box-front2,
+.flip-box-back2 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-box-front2 {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-box-back2 {
+  background-color: #555;
+  color: white;
+  transform: rotateY(180deg);
+}
 
 .divv {
-    /* background-color: white; */
-    margin-top: 30px;
-    width: 950px;
-    height: auto;
-    margin-left: 50px;
-    padding: 15px; 
+  /* background-color: white; */
+  margin-top: 30px;
+  width: 950px;
+  height: auto;
+  margin-left: 50px;
+  padding: 15px;
 }
 
 
 
 /* footer */
 footer {
-    margin-top: 113px;
+  margin-top: 113px;
 }
 
 .foot-panel1 {
-    /* background-color: grey; */
-    color: black;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 0.85rem;
+  /* background-color: grey; */
+  color: black;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.85rem;
 }
 
 .foot-panel2 {
-    background-color: whitesmoke;
-    color: black;
-    height: 300px;
-    display: flex;
-    justify-content: space-evenly;
+  background-color: whitesmoke;
+  color: black;
+  height: 300px;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 ul {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 ul a {
-    display: block;
-    font-size: 0.85rem;
-    margin-top: 10px;
-    color: bla;
+  display: block;
+  font-size: 0.85rem;
+  margin-top: 10px;
+  color: bla;
 }
 
 .foot-panel3 {
-    height: 70px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
 }
 
 .logo1 {
-    background-image: url("../IMG/decor7.jpeg");
-    background-size: cover;
-    border-radius: 60%;
-    height: 50px;
-    width: 100px;
+  background-image: url("../IMG/decor7.jpeg");
+  background-size: cover;
+  border-radius: 60%;
+  height: 50px;
+  width: 100px;
 
 }
 
 .foot-panel4 {
-    background-color: #0F1111;
-    color: white;
-    height: 80px;
-    font-size: 0.7rem;
-    text-align: center;
-    /* display: flex;
+  background-color: #0F1111;
+  color: white;
+  height: 80px;
+  font-size: 0.7rem;
+  text-align: center;
+  /* display: flex;
     justify-content: center;
     align-items: center; */
 }
 
 .pages {
-    padding-top: 25px;
+  padding-top: 25px;
 
 }
 
 .copy-right {
-    padding-top: 3px;
+  padding-top: 3px;
 }
 
 /* =================================COLEECTION PAGE CSS====================================== */
 
-a
-{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
+
 .product-card {
-    width: 270px;
-    height: 400px;
-    position: relative;
-    box-shadow: 0 2px 17px #dfdfdf;
-    margin: 20px;
-    background: #fafafa;
+  width: 270px;
+  height: 400px;
+  position: relative;
+  box-shadow: 0 2px 17px #dfdfdf;
+  margin: 20px;
+  background: #fafafa;
 }
 
 /* .badge {
@@ -234,20 +236,21 @@ a
 } */
 
 .product-tumb {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* height: 290px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* height: 290px;
     width: 290px; */
-    padding: 10px;
-    /* background: #f0f0f0; */
+  padding: 10px;
+  /* background: #f0f0f0; */
 }
 
 .product-tumb img {
-   height: 250px;
-   width: 250px;
-  
+  height: 250px;
+  width: 250px;
+
 }
+
 /* ===============================SIGIN PAGE CSS====================================== */
 
 .login-box {
@@ -255,16 +258,16 @@ a
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 400px;
+  width: 500px;
   padding: 40px;
   transform: translate(-50%, -50%);
-  background:rgba(0,0,0,.5);
+  background: rgba(0, 0, 0, .5);
   /* box-sizing: border-box; */
-  box-shadow:  14px 13px white;
+  box-shadow: 14px 13px white;
   border-radius: 10px;
 }
 
-.login-box h2 {
+/* .login-box h2 {
   margin: 0 0 30px;
   padding: 0;
   color: #fff;
@@ -286,9 +289,10 @@ a
   outline: none;
   background: transparent;
 }
+
 .login-box .user-box label {
   position: absolute;
-  top:0;
+  top: 0;
   left: 0;
   padding: 10px 0;
   font-size: 16px;
@@ -297,8 +301,8 @@ a
   transition: .5s;
 }
 
-.login-box .user-box input:focus ~ label,
-.login-box .user-box input:valid ~ label {
+.login-box .user-box input:focus~label,
+.login-box .user-box input:valid~label {
   top: -20px;
   left: 0;
   color: #03e9f4;
@@ -319,3 +323,55 @@ a
   letter-spacing: 4px
 }
 
+.signinbtn {
+  margin-left: 140px;
+  padding: 10px;
+} */
+
+
+.login-box h2{
+  text-align: center;
+}
+form{
+  margin: 30px;
+}
+ .user-box1 label{
+  margin-left: 20px;
+
+ }
+
+ .user-box1 input{
+  margin-left: 50px;
+  height: 40px;
+  width: 200px;
+
+ }
+
+ .user-box2 label{
+  margin-left: 20px;
+
+ }
+
+ .user-box2 input{
+  margin-left: 54px;
+  height: 40px;
+  width: 200px;
+
+ }
+
+ .user-box3 label{
+  margin-left: 18px;
+
+ }
+
+ .user-box3 input{
+  margin-left: 23px;
+  height: 40px;
+  width: 200px;
+
+ }
+ .signinbtn{
+  margin-left: 230px;
+  padding: 10px;
+  border-radius: 20px;
+ }
